# MWEQMLImportErrorCLion

./: CMakeLists.txt  Main.qml  main.cpp
imports/: CMakeLists.txt
imports/Module/: CMakeLists.txt
imports/module1/: CMakeLists.txt  Type1.qml
imports/module2/: CMakeLists.txt  Type2.qml
imports/module3/: CMakeLists.txt  Singleton.qml  property_type.cpp  property_type.hpp
